# arm-hack

./: README.md  benchmark_logger.py  benchmark_results.csv  pubspec.yaml
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
android/app/src/main/kotlin/com/armhack/speech_translator/: MainActivity.kt  WhisperBridge.kt
docs/: ARCHITECTURE.md  BENCHMARKS.md  CHALLENGES.md
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: translation_state.dart
lib/providers/: translator_provider.dart
lib/screens/: home_screen.dart
lib/services/: stt_service.dart  translation_service.dart  tts_service.dart  whisper_channel.dart
lib/widgets/: mic_button.dart  translation_log.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
web/: index.html
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc
